# webapp-example-backend

./: .gitignore  Decision Tree  Dockerfile  Procfile  README.md  app.py  pyproject.toml  requirements.txt  run.py  serve_model.py  setup.cfg  split_data.py  test_api.py  test_split_data.py  train_model.py  train_model.yaml  wsgi.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  extensions.py
app/api_serving/: serve_model.py
app/model_training/: train_model.py
app/models/: model_manager.py
app/routes/: __init__.py  helper_service.py  model_diagnostics.py  model_serving.py  model_training.py
app/services/: helper_service.py  inference_service.py  model_diagnostics.py  training_service.py
app/utils/: data_preprocessing.py  data_utils.py  model_utils.py
data/processed/: train_val_data.csv
models/: Decision Tree.pkl  Gradient Boosting.pkl  Logistic Regression.pkl  SVM.pkl  best_model.pkl  best_model_pipeline.pkl  min_max_values.pkl  model_monitor.pkl  model_results.json  preprocessor.pkl  progress.json
scripts/: client_request_example.ps1  sample_request.ps1  split_data.py
src/: ModelMonitor.py  data_utils.py
src/api_serving/: serve_model.py
src/data_processing/: split_data.py
tests/: test_api.py  test_data_processing.py  test_data_utils.py  test_frontend.py  test_helper_service.py  test_helper_services.py  test_inference_service.py  test_model_diagnostics.py  test_model_manager.py  test_model_monitor.py  test_model_serving.py  test_model_training.py  test_split_data.py  test_training_service.py
