[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webapp-example-backend"
version = "0.1.0"
description = "A web application backend example"
requires-python = ">=3.11"
authors = [
    { name = "Joseph McGuire", email = "joseph.c.mcg@gmail.com" }
]
license = { text = "BSD 3-Clause" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
serve_model = "src.api_serving.serve_model:main"
train_model = "src.model_training.train_model:main"

[project.optional-dependencies]
all = [
    "Flask==3.1.0",
    "requests==2.32.3",
    "unittest2==1.1.0",
    "numpy==2.0.2",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "setuptools==65.5.0",
    "tdqm==4.67.0",
    "shap==0.46.0",
    "pyyaml==6.0.2",
    "flask_cors==5.0.0"
]

[tool.pip-requirements]
file = "requirements.txt"