[metadata]
name = predictive-maintenance-scikit-learn-example
version = 0.1.0
description = A predictive maintenance system for industrial equipment using machine learning
author = Joseph McGuire
author_email = joseph.c.mcg@gmail.com
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.11
packages = find:
install_requires =
    pandas
    numpy
    scikit-learn
    pyyaml
    matplotlib
    seaborn
    flask
    shap
    joblib
    flask
    flask-cors
    pytest

[options.extras_require]
dev =
    pytest==6.2.5
    black==21.7b0
    mypy==0.910
    flake8==3.9.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    predictive_maintenance = main:app.run
